--- a/docs/.vitepress/theme/vars.css
+++ b/docs/.vitepress/theme/vars.css
@@ -168,3 +168,11 @@
 
 	--list-marker: #569cd6;
 }
+
+/**
+ * 侧栏滚动条颜色
+ * -------------------------------------------------------------------------- */
+:root {
+	--aside-scroll: rgba(194, 194, 194, 0.2);
+	--aside-scroll-hover: rgba(194, 194, 194, 0.64);
+}
