--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -45,3 +45,15 @@ html {
 li::marker {
 	color: var(--list-marker);
 }
+
+.VPSidebar::-webkit-scrollbar {
+	width: 6px;
+}
+
+.VPSidebar::-webkit-scrollbar-thumb {
+	background-color: var(--aside-scroll);
+}
+
+.VPSidebar::-webkit-scrollbar-thumb:hover {
+	background-color: var(--aside-scroll-hover);
+}
