--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -42,6 +42,10 @@ html {
 	}
 }
 
+// .VPDoc.has-aside .content .content-container{
+// 	max-width: 726px;
+// }
+
 li::marker {
 	color: var(--list-marker);
 }
