--- a/docs/.vitepress/theme/vars.css
+++ b/docs/.vitepress/theme/vars.css
@@ -180,3 +180,10 @@
 	--aside-scroll: rgba(194, 194, 194, 0.1);
 	--aside-scroll-hover: rgba(194, 194, 194, 0.3);
 }
+
+/**
+ * 布局
+ * -------------------------------------------------------------------------- */
+:root {
+  /* --vp-layout-max-width: 1480px;	 */
+}
