--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -61,3 +61,7 @@ li::marker {
 .VPSidebar::-webkit-scrollbar-thumb:hover {
 	background-color: var(--aside-scroll-hover);
 }
+
+.aside-container{
+	scroll-behavior: smooth;
+}
