--- a/docs/.vitepress/theme/style.scss
+++ b/docs/.vitepress/theme/style.scss
@@ -53,9 +53,9 @@ html {
   }
 }
 
-// .VPDoc.has-aside .content .content-container{
-// 	max-width: 726px;
-// }
+.VPDoc.has-aside .content .content-container{
+	max-width: 762px;
+}
 
 li::marker {
   color: var(--list-marker);
