添加CSS变换文档及示例代码

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -145,3 +145,13 @@
 .medium-zoom-image {
   z-index: 31;
 }
+
+/**
+ *  公共样式
+ * -------------------------------------------------------------------------- */
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
