feat: 添加处理粘贴事件示例及优化默认样式

--- a/.vitepress/theme/style.css
+++ b/.vitepress/theme/style.css
@@ -155,3 +155,12 @@
   align-items: center;
   justify-content: center
 }
+
+button.native,
+input.native,
+optgroup.native,
+select.native,
+textarea.native {
+  /* 还原浏览器默认样式 */
+  all: revert;
+}
