style(vitepress): 调整导航栏菜单样式
- 调整菜单整体 padding 布局
- 优化菜单组的 margin 设置
- 移除多余空行，提高代码可读性

--- a/.vitepress/theme/theme.scss
+++ b/.vitepress/theme/theme.scss
@@ -2,12 +2,12 @@
  *  导航栏
  * -------------------------------------------------------------------------- */
 .VPNavBarMenu .menu .VPMenu {
-  padding: 0 0 12px;
+  padding: 12px 0;
   .VPMenuGroup {
     padding: 12px 0 0;
     margin: 12px 0 0;
     &:first-child {
-      margin: 0;
+      margin: -12px 0 0;
     }
     .title {
       font-size: 12px;
@@ -15,11 +15,11 @@
       color: var(--vp-c-text-3);
       padding: 0 18px;
     }
-    .VPLink.link{
-      font-size: 13px;
-      line-height: 28px;
-      padding: 0 18px;
-      border-radius: 0;
-    }
+  }
+  .VPLink.link {
+    font-size: 13px;
+    line-height: 28px;
+    padding: 0 18px;
+    border-radius: 0;
   }
 }
